# fescontrol

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fesapps.yml  install_manifest.txt  main.cpp  mainConnectedFES.cpp  mainGUI.cpp
doc/: Doxyfile
resources/: AuthorizedMovements.json~  extension.json  flexion.json  flexionAnn.json  flexionJulien.json  lowStimDouble.json  lowStimDouble.json~  lowStimSingle.json  reachingJulien.json
src/: Application.cpp  Application.h  Channel.cpp  Channel.h  ConnectedApplication.cpp  ConnectedApplication.h  FESJsonReader.cpp  FESJsonReader.h  FESStimulator.cpp  FESStimulator.h  Incrementer.h  IncrementerFactory.cpp  IncrementerFactory.h  LinearIncrementer.cpp  LinearIncrementer.h  MovementAuthorizer.cpp  MovementAuthorizer.h  SetterAction.cpp  SetterAction.h  StimulationAction.cpp  StimulationAction.h  StimulationActionFactory.cpp  StimulationActionFactory.h  TimeLimitedAction.cpp  TimeLimitedAction.h
src/GUI/: GUIFESStimulator.cpp  GUIFESStimulator.h
src/errors/: AuthorizerException.h  ChannelException.h  JsonException.h  LoopException.h  StimulationException.h
src/interfaces/: CcCoreInstance.cpp  CcCoreInstance.h  ClLoopInstance.cpp  ClLoopInstance.h  ClTobiIdInstance.cpp  ClTobiIdInstance.h  SerialPort.cpp  SerialPort.h
test/: mainTest.cpp
test/resources/: AuthorizedMovements.json  BadGrammarActionType.json  BadGrammarLinearAction.json  BadGrammarSetterAction.json  LinearStimActionSuccess.json  SetterStimActionSuccess.json  badGrammarAction1MovementAuthorizer.json  badGrammarAction2MovementAuthorizer.json  file.json  flexion.json  incompleteSecondAction.json  parameters1.json  simultaneousStimulation.json
test/src/: ApplicationTestCase.cpp  ApplicationTestCase.h  ChannelTestCase.cpp  ConnectedApplicationTestCase.cpp  FESJsonReaderTestCase.cpp  FESStimulatorTest.cpp  IncrementerFactoryTest.cpp  LinearIncrementerTestCase.cpp  MovementAuthorizerTestCase.cpp  SetterActionTestCase.cpp  StimulationActionFactoryTestCase.cpp  StimulationActionTestCase.cpp  TimeLimitedActionTestCase.cpp
test/src/mocks/: ChannelMock.h  ClLoopMock.h  ClTobiIdMock.h  FESJsonReaderMock.h  FESStimulatorMock.h  IncrementerMock.h  SerialPortMock.h  StimulationActionMock.h
